# libripper

./: AudioTrack.hpp  README.md  RipperEngine.cpp  RipperEngine.hpp  config.status  configure  configure.in  configure.scan  ripper.h  test.c
autom4te.cache/: output.0  requests  traces.0  traces.1
test/: ripper.c
